--- a/src/pages/homePage/homepage.scss
+++ b/src/pages/homePage/homepage.scss
@@ -6,7 +6,7 @@ body {
 
 .wrapper {
   position: relative;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
   //   padding-top: 6em;
   font-family: 'Poppins', sans-serif;
@@ -56,7 +56,7 @@ form {
   align-items: center;
   justify-content: space-between;
   flex-direction: initial;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   //   margin-bottom: 5em;
 }
 .form-header .logo {
@@ -108,7 +108,7 @@ form {
 .form-body form .input-group {
   margin-bottom: 0;
   width: 100%;
-  //   background-color: red;
+    // background-color: red;
   //   margin-bottom: 2em;
   //   flex: 1;
 }
@@ -122,15 +122,16 @@ form {
 }
 .form-body form .input-group .header .description .title {
   text-transform: capitalize;
-  font-size: 1.1em;
+  font-size: 14px;
+  // font-size: 1.1em;
   font-weight: 700;
   color: #05365c;
   //   margin-bottom: 0.4em;
   margin-bottom: 0em;
 }
 .form-body form .input-group .header .description .desc {
-  font-size: 0.77em;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: 400;
   color: #8e96a3;
 }
 .form-body form .input-group .header button.edit {
@@ -155,35 +156,44 @@ form {
 }
 .form-body form .input-group .main {
   position: relative;
-  margin-top: 1em;
+  margin-top: 16px;
   width: 100%;
 }
-.form-body form .input-group .main svg {
+.form-body form .input-group .main img {
   position: absolute;
 }
-.form-body form .input-group .main svg.leading-icon {
+.form-body form .input-group .main img.leading-icon {
   left: 0;
   height: 2em;
   top: 50%;
   transform: translate(0, -50%);
   left: 1.2em;
+    width: 34px;
+      height: 34px;
 }
 .form-body form .input-group .main img.trailing-icon {
+  width: 20px;
+  height: 20px;
   right: 0;
-  height: 1.5em;
+  // height: 1.5em;
   top: 50%;
   transform: translate(0, -50%);
   right: 1.5em;
 }
 .form-body form .input-group .main input {
   border: 2px solid rgba(224, 224, 224, 0.5);
-  width: 100%;
-  padding: 1em 4em 1em 4em;
-  font-size: 1.2em;
+  width: 70%;
+  padding: 12px 20px;
+  padding-left: 100px;
+  font-size: 16px;
   font-weight: 600;
   border-radius: 6px;
   background: linear-gradient(45deg, #f5f8ff, transparent);
   color: #05365c;
+}
+
+.form-body form .input-group .main input.inputClass{
+  width: 100%;
 }
 .form-body form .input-group .main input:focus {
   outline-color: #0077b6;
@@ -197,33 +207,39 @@ form {
   align-items: center;
   justify-content: space-between;
   flex-direction: initial;
+    margin-top: 16px;
 }
 .form-body form .input-group.__col .grp {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: initial;
-  width: 400px;
+  // flex-direction: initial;
+  width: 250px;
   position: relative;
 }
 .form-body form .input-group.__col .grp .divider {
   display: block;
-  font-size: 1.5em;
+  font-size: 12px;
   font-weight: 500;
   color: #05365c;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 0);
+  align-self: center;
+  margin-top: auto;
+
+  transform: translate(-50%, 50%);
 }
 .form-body form .input-group.__col .main {
-  margin-top: 0;
-  width: 400px;
+  width: 250px;
+  display: flex;
+  justify-content: flex-end;
 }
 .form-body form .input-group.__col .main input {
   padding-right: 0;
   padding-left: 0;
   text-align: center;
   background: none;
+width: 100%;
 }
 .form-body form .input-group.__col .main input:focus {
   background: rgba(0, 119, 182, 0.05);
@@ -237,7 +253,8 @@ form {
   opacity: 0.35;
 }
 .form-body form .input-group.__col .main.__date {
-  width: 42%;
+  width: 45%;
+
 }
 .form-body form .btn-submit {
   background-color: #035fff;
