--- a/src/components/orderDetails/orderDetails.scss
+++ b/src/components/orderDetails/orderDetails.scss
@@ -1,268 +1,300 @@
 .checkout {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  float: right;
+
+  .credit-card {
+    // width: 16em;
+    width: 200px;
+    height: 50%;
+    // height: 23.4em;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.6), #fff);
+    backdrop-filter: blur(15px);
+    padding: 2em;
+    border-radius: 1em;
+    box-shadow: 0px 20px 34px 2px rgba(224, 224, 224);
+    // box-shadow: 0px 4px 14px 2px rgba(224, 224, 224, 0.6);
     position: relative;
-    height: 100%;
-    width: 90%;
-    float: right;
-    .credit-card {
-            width: 16em;
-            height: 23.4em;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.6), #fff);
-            backdrop-filter: blur(15px);
-            padding: 2em;
-            border-radius: 1em;
-            box-shadow: 0px 4px 14px 2px rgba(224, 224, 224, 0.6);
-            position: relative;
-            z-index: 99;
-            left: 50%;
-            transform: translate(-50%, 0);
-            overflow: hidden;
+    z-index: 99;
+    left: 50%;
+    transform: translate(-50%, 0);
+    overflow: hidden;
+
+    .credit-card__head {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: initial;
+      //   margin-bottom: 8em;
+      margin-bottom: 70px;
+
+      img {
+        height: 25px;
+        // height: 1.8em;
+        // height: 50px;
+      }
+
+      .chip {
+        height: 40px;
+      }
+    }
+
+    .credit-card__body {
+      position: relative;
+      color: #05365c;
+
+      span {
+        display: block;
+      }
+      .holder {
+        text-transform: capitalize;
+        //   font-size: 0.95em;
+        font-size: 12px;
+
+        font-weight: 500;
+        margin-bottom: 0.5em;
+        color: #616161;
+      }
+      .card-digits {
+        display: flex;
+        margin-bottom: 0.5em;
+        margin-bottom: 0.5em;
+
+        .hidden-digits {
+          display: flex;
+          align-items: center;
+          justify-content: initial;
+          flex-direction: initial;
+          margin-right: 0.5em;
+          .circle {
+            height: 0.4em;
+            width: 0.4em;
+            border-radius: 50%;
+            background-color: #17254c;
+            margin-right: 0.4em;
+          }
         }
-}
+        .visible-digits {
+          font-size: 12px;
+          // font-size: 1.1em;
+          font-weight: 700;
+        }
+      }
+    }
 
- 
+    .credit-card__footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: initial;
+      position: relative;
+      // top: 1.4em;
+      top: 20px;
 
-.checkout .credit-card__head {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
-    margin-bottom: 8em;
-}
+      .expiry {
+        //   font-size: 1em;
+        font-size: 12px;
+        font-weight: 600;
+      }
 
-.checkout .credit-card__head img {
-    height: 1.8em;
-}
+      .logo {
+        //   height: 2.5em;
+        height: 28px;
+      }
+    }
+    .card__design {
+      width: 700px;
+      height: 700px;
+      border: 1px solid #ebebeb;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 3.5em;
+      left: -6em;
+      z-index: -1;
 
-.checkout .credit-card__head .chip {
-    height: 3.5em;
-}
-
-.checkout .credit-card__body {
-    position: relative;
-    color: #05365c;
-}
-
-.checkout .credit-card__body span {
-    display: block;
-}
-
-.checkout .credit-card__body .holder {
-    text-transform: capitalize;
-    font-size: 0.95em;
-    font-weight: 500;
-    margin-bottom: 0.5em;
-    color: #616161;
-}
-
-.checkout .credit-card__body .card-digits {
-    display: flex;
-    margin-bottom: 0.5em;
-}
-
-.checkout .credit-card__body .card-digits .hidden-digits {
-    display: flex;
-    align-items: center;
-    justify-content: initial;
-    flex-direction: initial;
-    margin-right: 0.5em;
-}
-
-.checkout .credit-card__body .card-digits .hidden-digits .circle {
-    height: 0.4em;
-    width: 0.4em;
-    border-radius: 50%;
-    background-color: #17254c;
-    margin-right: 0.4em;
-}
-
-.checkout .credit-card__body .card-digits .visible-digits {
-    font-size: 1.1em;
-    font-weight: 700;
-}
-
-.checkout .credit-card__footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
-    position: relative;
-    top: 1.4em;
-}
-
-.checkout .credit-card__footer .expiry {
-    font-size: 1em;
-    font-weight: 600;
-}
-
-.checkout .credit-card__footer .logo {
-    height: 2.5em;
-}
-
-.checkout .credit-card .card__design {
-    width: 700px;
-    height: 700px;
-    border: 1px solid #ebebeb;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 3.5em;
-    left: -6em;
-    z-index: -1;
-}
-
-.checkout .credit-card .card__design .inner {
-    display: inline-block;
-    width: 570px;
-    height: 570px;
-    border-radius: inherit;
-    border: inherit;
+      .inner {
+        display: inline-block;
+        width: 570px;
+        height: 570px;
+        border-radius: inherit;
+        border: inherit;
+      }
+    }
+  }
 }
 
 .checkout .blu {
-    display: block;
-    height: 1.5em;
-    width: 5em;
-    background-color: #035fff;
-    position: absolute;
-    top: -7px;
-    left: 50%;
-    transform: translate(-50%, 0);
+  display: block;
+  height: 1.5em;
+  width: 5em;
+  background-color: #035fff;
+  position: absolute;
+  top: -7px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-.checkout .checkout-details {
-    background-color: #f0f3f8;
-    height: 82%;
-    width: 100%;
-    border-radius: 1em;
-    position: absolute;
-    bottom: 0;
-}
+.checkout-details {
+  background-color: #f0f3f8;
+  height: 88%;
+  //   height: 82%;
+  width: 100%;
+  border-radius: 1em;
+  position: absolute;
+  //   bottom: 0;
+  top: 68px;
 
-.checkout .checkout-details .purchase-data {
+  .purchase-data {
     position: relative;
-    top: 15.5em;
-    padding: 2em;
-}
+    top: 200px;
+    top: 200px;
+    padding: 16px 32px;
 
-.checkout .checkout-details .purchase-data .data {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
-    text-transform: capitalize;
-    font-size: 1em;
-    color: #8e96a3;
-    margin-bottom: 1.2em;
-}
+    // top: 15.5em;
+    // padding: 2em;
 
-.checkout .checkout-details .purchase-data .data .title {
-    font-size: 0.85em;
-    font-weight: 500;
-}
+    .data {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: initial;
+      text-transform: capitalize;
+      //   font-size: 1em;
+      font-size: 13px;
+      color: #8e96a3;
+      //   margin-bottom: 1.2em;
+      margin-bottom: 8px;
 
-.checkout .checkout-details .purchase-data .data .value {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
-}
+      .title {
+        font-size: 0.85em;
+        font-weight: 500;
+      }
 
-.checkout .checkout-details .purchase-data .data .value img {
-    height: 1.5em;
-}
+      .value {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: initial;
 
-.checkout .checkout-details .purchase-data .data .value .inner-text {
-    color: #05365c;
-    font-weight: 600;
-    margin-left: 0.6em;
-}
+        img {
+          height: 1.5em;
+        }
 
-.checkout .checkout-details .divider {
+        .inner-text {
+          color: #05365c;
+          font-weight: 600;
+          margin-left: 0.6em;
+        }
+      }
+    }
+  }
+
+  .divider {
     position: absolute;
-    bottom: 7.4em;
+    bottom: 90px;
+    // bottom: 7.4em;
     width: 100%;
     border: 4px dashed #cbcbcb;
     display: flex;
     align-items: center;
-}
 
-.checkout .checkout-details .divider .left,
-.checkout .checkout-details .divider .right {
-    position: absolute;
-    height: 2.65em;
-    width: 2.65em;
-    background-color: #fff;
-    border-radius: 50%;
-}
+    .left,
+    .right {
+      position: absolute;
+      height: 35px;
+      width: 35px;
+      //   height: 2.65em;
+      //   width: 2.65em;
+      background-color: #fff;
+      border-radius: 50%;
+    }
 
-.checkout .checkout-details .divider .left {
-    bottom: -15px;
-    left: -25px;
-}
+    .left {
+      bottom: -15px;
+      left: -25px;
+    }
 
-.checkout .checkout-details .divider .right {
-    bottom: -15px;
-    right: -25px;
-}
-
-.checkout .checkout-details .divider::before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2em;
-    background-color: #f0f3f8;
-    bottom: -30px;
+    .right {
+      bottom: -15px;
+      right: -25px;
+    }
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 22px;
+      //   height: 2em;
+      background-color: #f0f3f8;
+      bottom: -20px;
+      //   bottom: -30px;
+    }
+  }
 }
 
 .checkout .checkout-details .purchase-total {
-    position: absolute;
-    bottom: 1.4em;
-    width: 100%;
-    padding: 0 2em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
+  position: absolute;
+  //   bottom: 1.4em;
+  bottom: 20px;
+  //   bottom: 40px;
+
+  width: 100%;
+  //   padding: 0 2em;
+  padding: 0 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: initial;
 }
 
 .checkout .checkout-details .purchase-total .total .desc {
-    color: #8e96a3;
-    font-size: 0.9em;
-    font-weight: 500;
+  color: #8e96a3;
+  font-size: 0.9em;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .checkout .checkout-details .purchase-total .total .t-amount {
-    display: flex;
-    align-items: center;
-    justify-content: initial;
-    flex-direction: initial;
-    color: #05365c;
+  display: flex;
+  align-items: center;
+  justify-content: initial;
+  flex-direction: initial;
+  color: #05365c;
 }
 
 .checkout .checkout-details .purchase-total .total .t-amount .amount {
-    font-size: 2em;
-    font-weight: 700;
+  font-size: 20px;
+  //   font-size: 2em;
+  font-weight: 700;
 }
 
 .checkout .checkout-details .purchase-total .total .t-amount .amount sub {
-    font-size: 0.6em;
-    position: relative;
-    bottom: 1px;
-    font-weight: 500;
+  font-size: 14px;
+  //   font-size: 0.6em;
+  position: relative;
+  bottom: 5px;
+  //   bottom: 1px;
+  font-weight: 600;
+  //   font-weight: 500;
 }
 
 .checkout .checkout-details .purchase-total .total .t-amount .symbol {
-    position: relative;
-    top: 4px;
-    font-size: 1.1em;
-    margin-left: 0.2em;
-    color: #8e96a3;
+  position: relative;
+  top: 2px;
+
+  //   font-size: 1.1em;
+  font-size: 14px;
+
+  margin-left: 6px;
+  //   margin-left: 0.2em;
+  color: #8e96a3;
 }
 
 .checkout .checkout-details .purchase-total img {
-    height: 1.6em;
+  height: 1.6em;
 }
