--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@
 // Colors
 $dark_bg: #17254c;
 $blue_bg: #035fff;
+$checkout_bg: #f0f3f8;
+$white_bg: #f0f3f8;
 $text_one: #05365c;
 $text_two: #8e96a3;
 $input-border: rgb(224 224 224 / 50%);
