--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 $dark_bg: #17254c;
 $blue_bg: #035fff;
 $checkout_bg: #f0f3f8;
-$white_bg: #f0f3f8;
+$white_bg: #fff;
 $text_one: #05365c;
 $text_two: #8e96a3;
 $input-border: rgb(224 224 224 / 50%);
