--- a/src/components/orderDetails/orderDetails.scss
+++ b/src/components/orderDetails/orderDetails.scss
@@ -9,7 +9,7 @@
   .credit-card {
     width: 200px;
     height: 50%;
-    min-height: 100px;
+    height: 260px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.6), $white_bg);
     backdrop-filter: blur(15px);
     padding: 32px;
@@ -123,12 +123,13 @@
   .checkout-details {
     background-color: $checkout_bg;
     height: 88%;
-    min-height: 300px;
     width: 100%;
+    height: 430px;
     max-width: 350px;
     border-radius: 16px;
     position: absolute;
     top: 68px;
+
     max-height: 500px;
 
     .purchase-data {
@@ -316,6 +317,7 @@
       top: 100px;
       left: 50%;
       transform: translate(-50%, 0);
+      height: 300px !important;
       .purchase-data {
         top: 70px;
 
